[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "libpcapng"
version = "0.15"
description = "Convenience alias — installs pycapng, the Python bindings for libpcapng"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["pycapng>=0.15"]

[project.urls]
Homepage = "https://github.com/stricaud/libpcapng"
"Bug Tracker" = "https://github.com/stricaud/libpcapng/issues"
