[package]
name = "libpcapng-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Raw FFI bindings to libpcapng, a pcapng file I/O and dissection library"
keywords = ["pcapng", "pcap", "network", "ffi", "bindings"]
categories = ["external-ffi-bindings", "network-programming"]
links = "pcapng"

include = [
    "src/**/*.rs",
    "build.rs",
    "wrapper.h",
    "README.md",
    "vendor/**/*.c",
    "vendor/**/*.h",
]

[build-dependencies]
bindgen = "0.70"
cc = "1.1"
