[package]
name = "libpcapng"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Safe, idiomatic Rust bindings for libpcapng — pcapng file I/O and packet dissection"
keywords = ["pcapng", "pcap", "network", "dissect", "capture"]
categories = ["network-programming", "parser-implementations"]

[dependencies]
libpcapng-sys = { version = "0.15.0", path = "../libpcapng-sys" }

[[example]]
name = "read"
